--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 <html>
 	<head>
 		<title>Hyper Text 2018</title>
+
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
@@ -27,30 +28,29 @@
 						<nav id="nav">
 							<ul>
 								<li class="current"><a href="index.html">Home</a></li>
-								<li>
-									<a href="#"></a>
-									<ul>
-										<li><a href="#">Lorem dolor</a></li>
-										<li><a href="#">Magna phasellus</a></li>
-										<li><a href="#">Etiam sed tempus</a></li>
-										<li>
-											<a href="#">Submenu</a>
-											<ul>
-												<li><a href="#">Lorem dolor</a></li>
-												<li><a href="#">Phasellus magna</a></li>
-												<li><a href="#">Magna phasellus</a></li>
-												<li><a href="#">Etiam nisl</a></li>
-												<li><a href="#">Veroeros feugiat</a></li>
-											</ul>
-										</li>
-										<li><a href="#">Veroeros feugiat</a></li>
-									</ul>
-								</li>
+								<li class="current"><a href="index.html">Call for papers</a></li>
+								<li class="current"><a href="index.html">Programme</a></li>
 							</ul>
 						</nav>
 
 				</div>
 
+
+
+
+			<section>
+				<div class="body">
+					<h3>About</h3>
+					<p>The ACM Conference on Hypertext and Social Media (HT) is a premium venue for high quality peer-reviewed research on theory, systems and applications for hypertext and social media. It is concerned with all aspects of modern hypertext research, including social media, adaptation, personalization, recommendations, user modeling, linked data and semantic web, dynamic and computed hypertext, and its application in digital humanities, as well as with interplay between those aspects such as linking stories with data or linking people with resources. HT2017 will focus on the role of links, linking, hypertext and hyperlink theory on the web and beyond, as a foundation for approaches and practices in the wider community. Therefore, HT2017 has the following tracks:
+
+						<li>Social Networks and Digital Humanities (Linking people)</li>
+						<li>Semantic Web and Linked Data (Linking data)</li>
+						<li>Adaptive Hypertext and Recommendations (Linking resources)</li>
+						<li>News and Storytelling (Linking stories)</li>
+						<li>Demonstrations</li>
+					</p>
+				</div>
+			</section>
 
 			<!-- Highlights -->
 				<section class="wrapper style1">
@@ -58,15 +58,22 @@
 						<div class="row 200%">
 							<section class="4u 12u(narrower)">
 								<div class="box highlight">
-									<i class="icon major fa-paper-plane"></i>
+									<i class="icon major fa-calendar-plus-o"></i>
 									<h3>Important dates</h3>
 									<p>Coming Soon</p>
 								</div>
 							</section>
 							<section class="4u 12u(narrower)">
 								<div class="box highlight">
-									<i class="icon major fa-pencil"></i>
+									<i class="icon major  fa-arrow-circle-o-right"></i>
 									<h3>Call for Papers</h3>
+									<p>Coming Soon</p>
+								</div>
+							</section>
+							<section class="4u 12u(narrower)">
+								<div class="box highlight">
+									<i class="icon major  fa-calendar-plus-o"></i>
+									<h3>Program schedule</h3>
 									<p>Coming Soon</p>
 								</div>
 							</section>
@@ -79,7 +86,6 @@
 					<div class="container">
 						<header class="major">
 							<h2>HT2018 Under construction</h2>
-							<p>With a much smaller subtitle hanging out just below it</p>
 						</header>
 					</div>
 				</section>
