--- a/index.html
+++ b/index.html
@@ -27,7 +27,11 @@ http://www.templatemo.com/tm-406-flex
             <p class="chromeframe">You are using an outdated browser. <a href="http://browsehappy.com/">Upgrade your browser today</a> or <a href="http://www.google.com/chromeframe/?redirect=true">install Google Chrome Frame</a> to better experience this site.</p>
         <![endif]-->
 
-
+        <!-- <header>
+          <figure>
+            <img src="images/Baltimore-1.jpg" alt="Logo" />
+          </figure>
+        </header> -->
         <div class="site-main" id="sTop">
             <div class="site-header">
                 <div class="container">
@@ -42,13 +46,19 @@ http://www.templatemo.com/tm-406-flex
                         </div> <!-- /.col-md-12 -->
                     </div> <!-- /.row -->
                 </div> <!-- /.container -->
+                <div id="wrapperHeader">
+                    <div id="header">
+                        <img class="center" src="images/Baltimore-1.jpg" alt="logo" />
+                    </div>
+                </div>
+
                 <div class="main-header">
                     <div class="container">
                         <div id="menu-wrapper">
                             <div class="row">
                                 <div class="logo-wrapper col-md-2 col-sm-2">
                                     <h1>
-                                        <a href="#">HT2018</a>
+                                        <a href="#"> HT2018 </a>
                                     </h1>
                                 </div> <!-- /.logo-wrapper -->
                                 <div class="col-md-10 col-sm-10 main-menu text-right">
@@ -70,7 +80,7 @@ http://www.templatemo.com/tm-406-flex
                 <div class="slider">
                     <div class="flexslider">
                         <ul class="slides">
-                            <li>
+                            <!-- <li>
                                 <div class="overlay"></div>
                                 <img src="images/Baltimore_Skyline.jpg" alt="">
                                 <div class="slider-caption visible-md visible-lg">
@@ -78,7 +88,7 @@ http://www.templatemo.com/tm-406-flex
                                     <p>more visitors to your website</p>
                                     <a href="#" class="slider-btn">Let us design!</a>
                                 </div>
-                            </li>
+                            </li> -->
                             <!-- <li>
                                 <div class="overlay"></div>
                                 <img src="images/slide2.jpg" alt="">
@@ -108,64 +118,10 @@ http://www.templatemo.com/tm-406-flex
             <div class="container">
                 <div class="row">
                     <div class="heading-section col-md-12 text-center">
-                        <h2>Our Services</h2>
+                        <h2>About</h2>
                         <p>We design mobile-first websites for you</p>
                     </div> <!-- /.heading-section -->
-                </div> <!-- /.row -->
-                <div class="row">
-                    <div class="col-md-3 col-sm-6">
-                        <div class="service-item" id="service-1">
-                            <div class="service-icon">
-                                <i class="fa fa-file-code-o"></i>
-                            </div> <!-- /.service-icon -->
-                            <div class="service-content">
-                                <div class="inner-service">
-                                   <h3>HTML5 Coding</h3>
-                                   <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Enim, assumenda, eveniet, consectetur, ex doloribus veniam asperiores incidunt mollitia placeat aniet.</p>
-                                </div>
-                            </div> <!-- /.service-content -->
-                        </div> <!-- /#service-1 -->
-                    </div> <!-- /.col-md-3 -->
-                    <div class="col-md-3 col-sm-6">
-                        <div class="service-item" id="service-2">
-                            <div class="service-icon">
-                                <i class="fa fa-paper-plane-o"></i>
-                            </div> <!-- /.service-icon -->
-                            <div class="service-content">
-                                <div class="inner-service">
-                                   <h3>Our Support</h3>
-                                   <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Enim, assumenda, eveniet, consectetur, ex doloribus veniam asperiores incidunt mollitia placeat aniet.</p>
-                                </div>
-                            </div> <!-- /.service-content -->
-                        </div> <!-- /#service-1 -->
-                    </div> <!-- /.col-md-3 -->
-                    <div class="col-md-3 col-sm-6">
-                        <div class="service-item" id="service-3">
-                            <div class="service-icon">
-                                <i class="fa fa-institution"></i>
-                            </div> <!-- /.service-icon -->
-                            <div class="service-content">
-                                <div class="inner-service">
-                                   <h3>Our Design</h3>
-                                   <p>We make HTML CSS templates that are responsive for any screen size on any device. Feel free to download and use our templates without restrictions.</p>
-                                </div>
-                            </div> <!-- /.service-content -->
-                        </div> <!-- /#service-1 -->
-                    </div> <!-- /.col-md-3 -->
-                    <div class="col-md-3 col-sm-6">
-                        <div class="service-item" id="service-4">
-                            <div class="service-icon">
-                                <i class="fa fa-flask"></i>
-                            </div> <!-- /.service-icon -->
-                            <div class="service-content">
-                                <div class="inner-service">
-                                   <h3>Go for mobile</h3>
-                                   <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Enim, assumenda, eveniet, consectetur, ex doloribus veniam asperiores incidunt mollitia placeat aniet.</p>
-                                </div>
-                            </div> <!-- /.service-content -->
-                        </div> <!-- /#service-1 -->
-                    </div> <!-- /.col-md-3 -->
-                </div> <!-- /.row -->
+                </div>
             </div> <!-- /.container -->
         </div> <!-- /#services -->
 
