Add info about venue and logistics

--- a/index.html
+++ b/index.html
@@ -66,6 +66,7 @@ http://www.templatemo.com/tm-406-flex
                                     <ul class="menu-first">
                                         <li class="active"><a href="#">Home</a></li>
                                         <li><a href="#Commitee">Program Commitee</a></li>
+                                        <li><a href="#Venue">Venue</a></li>
                                         <li><a href="#Program">Program</a></li>
                                         <li><a href="#Call For papers">Call For papers</a></li>
                                         <!-- <li><a href="#Contact">Contact</a></li> -->
@@ -76,41 +77,6 @@ http://www.templatemo.com/tm-406-flex
                     </div> <!-- /.container -->
                 </div> <!-- /.main-header -->
             </div> <!-- /.site-header -->
-            <div class="site-slider">
-                <div class="slider">
-                    <div class="flexslider">
-                        <ul class="slides">
-                            <!-- <li>
-                                <div class="overlay"></div>
-                                <img src="images/Baltimore_Skyline.jpg" alt="">
-                                <div class="slider-caption visible-md visible-lg">
-                                    <h2>Digital Marketing</h2>
-                                    <p>more visitors to your website</p>
-                                    <a href="#" class="slider-btn">Let us design!</a>
-                                </div>
-                            </li> -->
-                            <!-- <li>
-                                <div class="overlay"></div>
-                                <img src="images/slide2.jpg" alt="">
-                                <div class="slider-caption visible-md visible-lg">
-                                    <h2>Responsive HTML CSS</h2>
-                                    <p>Download and use it for your site</p>
-                                    <a href="#" class="slider-btn">Go to Portfolio</a>
-                                </div>
-                            </li>
-                            <li>
-                                <div class="overlay"></div>
-                                <img src="images/slide3.jpg" alt="">
-                                <div class="slider-caption visible-md visible-lg">
-                                    <h2>Pro Level Design</h2>
-                                    <p>High standard work</p>
-                                    <a href="#" class="slider-btn">Mobile Website</a>
-                                </div>
-                            </li> -->
-                        </ul>
-                    </div> <!-- /.flexslider -->
-                </div> <!-- /.slider -->
-            </div> <!-- /.site-slider -->
         </div> <!-- /.site-main -->
 
 
@@ -127,7 +93,9 @@ http://www.templatemo.com/tm-406-flex
                           stories with data or linking people with resources. HT2017 will focus on the role of links, linking,
                           hypertext and hyperlink theory on the web and beyond, as a foundation for approaches and practices in the wider community.
                           Therefore, HT2017 has the following tracks:
-
+                          <li> Hyper-Society covers digital humanities and connecting/connected people </li>
+                          <li> Hyper-Data covers connected things on the documents, Web, and IoT </li>
+                          <li> Hyper-Media covers connected traditional and non-traditional media </li>
                           <li>Social Networks and Digital Humanities (Linking people)</li>
                           <li>Semantic Web and Linked Data (Linking data)</li>
                           <li>Adaptive Hypertext and Recommendations (Linking resources)</li>
@@ -157,8 +125,38 @@ http://www.templatemo.com/tm-406-flex
                           <li> <b>Data Chair</b> Fabricio Benevenuto fabricio@dcc.ufmg.br</li>
                           <li> <b>Outreach Co-chair</b> David Millard dem@ecs.soton.ac.uk</li>
                           <li> <b>Web Co-chair</b> Sagar Joglekar</li>
-                          <li> <b>Web Co-chair</b> Garimella Kiran</li>
+                          <li> <b>Web Co-chair</b> Kiran Garimella </li>
                         </p>
+                    </div> <!-- /.heading-section -->
+                </div> <!-- /.row -->
+
+            </div> <!-- /.container -->
+        </div> <!-- /#our-team -->
+
+        <div class="content-section" id="Venue">
+            <div class="container">
+                <div class="row">
+                    <div class="heading-section col-md-12 text-left">
+                        <h2>Venue and Logistics</h2>
+
+                        <h3> Venue </h3>
+                        <p>
+                          This year the confernece would be held at the city of Baltimore, Towson University Smith Hall Auditorium.
+                        </p>
+
+                        <h3> Lodging </h3>
+                        <p>
+                            <li>  Sheraton Baltimore North , 903 Dulaney Valley Road , Towson, MD 21252 , 888-627-7147 </li>
+                            <li> Towson university student dorm (more info later) </li>
+                        </p>
+
+                        <h3> Logistics </h3>
+
+                        </p>
+                          Bus service between Sheraton hotel and conference venue will run in
+                          the morning and evening
+                        </p>
+
                     </div> <!-- /.heading-section -->
                 </div> <!-- /.row -->
 
@@ -173,7 +171,7 @@ http://www.templatemo.com/tm-406-flex
                         <span>Copyright &copy; 2018 ACM HyperText</span>
                   </div> <!-- /.text-center -->
                     <div class="col-md-4 hidden-xs text-right">
-                        <a href="#top" id="go-top">Back to top</a>
+                        <a href="#top" id="go-top">Home</a>
                     </div> <!-- /.text-center -->
                 </div> <!-- /.row -->
             </div> <!-- /.container -->
