--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@ http://www.templatemo.com/tm-406-flex
                 </div> <!-- /.container -->
                 <div id="wrapperHeader">
                     <div id="header">
-                        <img class="center" src="images/Baltimore-1.jpg" alt="logo" />
+                        <img class="center" src="./images/Baltimore-1.jpg" alt="logo" />
                     </div>
                 </div>
 
