added separate html files

--- a/index.html
+++ b/index.html
@@ -39,8 +39,11 @@ http://www.templatemo.com/tm-406-flex
 		}
 
 		$(function(){
-			console.log("cfs");
 		    $("#includeAbout").load("about.html");
+		    $("#includeProgram").load("program.html");
+		    $("#includeCall").load("call_for_papers.html");
+		    $("#includeOrganization").load("organization.html");
+		    $("#includeVenue").load("venue.html");
 		});
 
         </script>
@@ -140,21 +143,7 @@ http://www.templatemo.com/tm-406-flex
             <div class="container">
                 <div class="row">
                     <div class="heading-section col-md-12 text-left">
-                        <h2>Organization Commitee</h2>
-                        <p>
-                          <li> <b>General Chair</b> Dongwon Lee dongwon@psu.edu </li>
-                          <li> <b>Local Chair</b> Nam Nguyen npnguyen@towson.edu </li>
-                          <li> <b>Program Co-chair</b> Ingmar Weber iweber@qf.org.qa</li>
-                          <li> <b>Program Co-chair</b>        Nishanth Sastry nishanth.sastry@kcl.ac.uk</li>
-                          <li> <b>Registration Chair</b> Thang Dinh tndinh@vcu.edu</li>
-                          <li> <b>Tutorial Co-chair</b> Miriam Redi miriam.redi@gmail.com</li>
-                          <li> <b>Tutorial Co-chair</b> Pete Burnap BurnapP@cardiff.ac.uk</li>
-                          <li> <b>Workshop Co-chair</b> Haewoon Kwak haewoon.kwak@gmail.com</li>
-                          <li> <b>Data Chair</b> Fabricio Benevenuto fabricio@dcc.ufmg.br</li>
-                          <li> <b>Outreach Co-chair</b> David Millard dem@ecs.soton.ac.uk</li>
-                          <li> <b>Web Co-chair</b> Sagar Joglekar</li>
-                          <li> <b>Web Co-chair</b> Kiran Garimella </li>
-                        </p>
+                      <div id="includeOrganization"></div>  
                     </div> <!-- /.heading-section -->
                 </div> <!-- /.row -->
 
@@ -165,25 +154,7 @@ http://www.templatemo.com/tm-406-flex
             <div class="container">
                 <div class="row">
                     <div class="heading-section col-md-12 text-left">
-                        <h2>Venue and Logistics</h2>
-
-                        <h3> Venue </h3>
-                        <p>
-                          This year the confernece would be held at the city of Baltimore, Towson University Smith Hall Auditorium.
-                        </p>
-
-                        <h3> Lodging </h3>
-                        <p>
-                            <li>  Sheraton Baltimore North , 903 Dulaney Valley Road , Towson, MD 21252 , 888-627-7147 </li>
-                            <li> Towson university student dorm (more info later) </li>
-                        </p>
-
-                        <h3> Logistics </h3>
-
-                        </p>
-                          Bus service between Sheraton hotel and conference venue will run in
-                          the morning and evening
-                        </p>
+                        <div id="includeVenue"></div>  
 
                     </div> <!-- /.heading-section -->
                 </div> <!-- /.row -->
