--- a/index.html
+++ b/index.html
@@ -139,6 +139,18 @@ http://www.templatemo.com/tm-406-flex
         </div> <!-- /#services -->
 
 
+		<div class="content-section" id="Call" name="Call">
+            <div class="container">
+                <div class="row">
+                    <div class="heading-section col-md-12 text-left">
+                      <div id="includeCall"></div>  
+                    </div> <!-- /.heading-section -->
+                </div> <!-- /.row -->
+
+            </div> <!-- /.container -->
+        </div> <!-- /#our-team -->
+
+
         <div class="content-section" id="Commitee" name="Commitee">
             <div class="container">
                 <div class="row">
@@ -182,32 +194,6 @@ http://www.templatemo.com/tm-406-flex
         <script src="js/plugins.js"></script>
         <script src="js/main.js"></script>
 
-        <!-- Google Map -->
-        <script src="http://maps.google.com/maps/api/js?sensor=true"></script>
-        <script src="js/vendor/jquery.gmap3.min.js"></script>
-
-        <!-- Google Map Init-->
-        <script type="text/javascript">
-            jQuery(function($){
-                $('#map_canvas').gmap3({
-                    marker:{
-                        address: '37.769725, -122.462154'
-                    },
-                        map:{
-                        options:{
-                        zoom: 15,
-                        scrollwheel: false,
-                        streetViewControl : true
-                        }
-                    }
-                });
-
-                /* Simulate hover on iPad
-                 * http://stackoverflow.com/questions/2851663/how-do-i-simulate-a-hover-with-a-touch-in-touch-enabled-browsers
-                 --------------------------------------------------------------------------------------------------------------*/
-                $('body').bind('touchstart', function() {});
-            });
-        </script>
         <!-- templatemo 406 flex -->
     </body>
 </html>
