added two column layout for about

--- a/index.html
+++ b/index.html
@@ -130,12 +130,12 @@ http://www.templatemo.com/tm-406-flex
 
         <div class="content-section" id="About" name="About">
             <div class="container">
-                <div class="row">
+                <div id="includeAbout"></div>
+                <!--div class="row">
                 	<div class="heading-section col-md-12 text-left">
-                	<div id="includeAbout"></div>
                 	</div>
                     
-                </div>
+                </div-->
             </div> <!-- /.container -->
         </div> <!-- /#services -->
 
