--- a/about.html
+++ b/about.html
@@ -1,4 +1,6 @@
-			<h2>About</h2>
+	                <div class="row">
+                    <div class="col-md-8 col-sm-6">
+<h2>About</h2>
                         <p>The ACM Conference on Hypertext and Social Media (HT) is a premium venue for high quality peer-reviewed research on theory,
                           systems and applications for hypertext and social media. The conference would be held in the beautiful city of Baltimore this year.
                           HyperText is concerned with all aspects of modern hypertext research,
@@ -16,3 +18,18 @@
                           <li>News and Storytelling (Linking stories)</li>
                           <li>Demonstrations</li>
                         </p>
+                    </div> <!-- /.col-md-8 -->
+                    <div class="col-md-4 col-sm-6">
+									<h3>Important dates</h3>
+<p><span style="text-decoration: line-through">Submission deadline: 14th June 2017</span><br />
+<span style="text-decoration: line-through">Acceptance announcement: 3rd July 2017</span><br />
+<span style="text-decoration: line-through">Registration ends (Early bird rate): 24th July 2017</span><br />
+<span style="text-decoration: line-through">Camera ready due:  21 July 2017</span><br />
+<strong>Registration (Normal rate):</strong> <strong>from 2nd to <span style="text-decoration: line-through">18th</span> 31st August 2017</strong></p>
+<p><strong>Conference:</strong> 13-15 September 2017</p>
+<p><em><strong>All the deadlines are at 23:59 <a href="https://www.timeanddate.com/worldclock/usa/honolulu" target="_blank" rel="noopener">Hawaii Time</a>.</strong></em></p>
+                    </div> <!-- /.col-md-4 -->
+                </div> <!-- /.row -->
+		
+
+
