temp commit. need to put everything in one file

--- a/about.html
+++ b/about.html
@@ -20,12 +20,11 @@
                         </p>
                     </div> <!-- /.col-md-8 -->
                     <div class="col-md-4 col-sm-6">
-									<h3>Important dates</h3>
-<p><span style="text-decoration: line-through">Submission deadline: 14th June 2017</span><br />
-<span style="text-decoration: line-through">Acceptance announcement: 3rd July 2017</span><br />
-<span style="text-decoration: line-through">Registration ends (Early bird rate): 24th July 2017</span><br />
-<span style="text-decoration: line-through">Camera ready due:  21 July 2017</span><br />
-<strong>Registration (Normal rate):</strong> <strong>from 2nd to <span style="text-decoration: line-through">18th</span> 31st August 2017</strong></p>
+									<h2>Important dates</h2>
+<p><span><b>Submission deadline: 14th June 2017</b></span><br />
+<span>Acceptance announcement: 3rd July 2017</span><br />
+<span>Registration ends (Early bird rate): 24th July 2017</span><br />
+<span>Camera ready due:  21 July 2017</span><br />
 <p><strong>Conference:</strong> 13-15 September 2017</p>
 <p><em><strong>All the deadlines are at 23:59 <a href="https://www.timeanddate.com/worldclock/usa/honolulu" target="_blank" rel="noopener">Hawaii Time</a>.</strong></em></p>
                     </div> <!-- /.col-md-4 -->
